# poscarkit

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  config.toml  main.py  poscarkit.py  pyproject.toml  requirements.txt  test.py  unit_test.py
.github/workflows/: release.yml
PoscarTools/: AtomAllocate.py  AtomConvert.py  AtomCountCN.py  AtomShuffle.py  AtomSlice.py  AtomSupercell.py  SimplePoscar.py  Supercell.py  Utils.py  color.css
docs/: POSCARKIT用户说明书.docx  POSCARKIT用户说明书.md  POSCARKIT设计说明书.docx  POSCARKIT设计说明书.md  code-review.md  用户操作手册.md
docs/superpowers/plans/: 2026-05-29-surface-slab-builder.md
docs/superpowers/specs/: 2026-05-29-surface-slab-builder-design.md
examples/: CoNiV.vasp  POSCAR-bcc.vasp  POSCAR-fcc.vasp  POSCAR-hcp.vasp
old/: BCC-4X4X4-128atoms.py  FCC-3X3X3-108atoms.py  HCP-2X2X2-64atoms.py  Integration-AtomDistanceSort-No2.py  配位数计算new.ipynb
old/GRS/: GTCalc.py  TDBManager.py  main.py  test.py
ref_sof_data/: pandat-data.csv  pandat-data.xlsx  tc_exps-multi-sheet.xlsx  tc_exps.csv  tc_exps.xlsx  teacher.csv  teacher.xlsx
src/cli/: poscarkit.py  poscarkit_interact.py  poscarkit_old.py
src/config/: __init__.py
src/gui/: app.py  forms.py
src/io/: ir.py
src/io/readers/: __init__.py  pandat.py  tc_exps.py  teacher.py
src/modeling/: __init__.py  base.py  countcn.py  model.py  slice.py  supercell.py  surface.py
src/thermo/: __init__.py  deltaG.py  plot.py  sconf.py  tdb.py
src/utils/: network.py  progress.py
src/workflow/: import_to_model.py  import_to_modeling.py  modeling.py  slice_to_countcn.py  thermo.py
tests/: test_slice_countcn.py  test_suite.py
tests/PoscarTools/: test_atom_allocate.py  test_atom_slice.py  test_atom_supercell.py
tests/cli/: test_cli.py
tests/data/: hea_6elem_CONTCAR.vasp
tests/gui/: test_gui.py
tests/modeling/: test_countcn.py  test_model.py  test_simple_poscar.py  test_slice.py  test_supercell.py  test_surface.py
tests/ref_data/: test_ref_data.py
tests/thermo/: test_sconf.py  test_tdb.py
tests/utils/: test_progress.py
tests/workflow/: test_modeling.py  test_slice_to_countcn.py
tests/workflows/: test_modeling.py  test_sliceandcountcn.py
tries/sqsgen/: 3c-Cu.vasp  CoNiV-1a-Au.json  CoNiV-3c-Cu.json  sqsgen_study.ipynb
workflows/: modeling.py  sliceandcountcn.py
