[project]
name = "poscarkit"
version = "0.9.0"
description = "A tool for modeling structure POSCAR files, based on Sublattice Occupied Fractions (SOFs)."
authors = [
    { name="Gao Min-Liang", email="barabama@qq.com" },
    { name="Qiao Yang", email="yangqiao@fzu.edu.cn" },
    { name="Yang Su-Wen", email="suwen@fzu.edu.cn" },
    { name="Wu Bo*", email="wubo@fzu.edu.cn" },

]
maintainers = [
    { name="Wu Bo", email="wubo@fzu.edu.cn" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "seaborn",
    "ase",
    "sqsgenerator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Materials Science",
]

[project.urls]
Homepage = "https://gitee.com/wubo-movers/poscarkit"
Repository = "https://gitee.com/wubo-movers/poscarkit.git"
"Bug Tracker" = "https://gitee.com/wubo-movers/poscarkit/issues"

[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"
