[project]
name = "poscarkit"
version = "0.9.0"
description = "A tool for modeling structure POSCAR files, based on Sublattice Occupied Fractions (SOFs)."
authors = [
    { name="Gao Min-Liang", email="barabama@qq.com" },
    { name="Qiao Yang", email="yangqiao@fzu.edu.cn" },
    { name="Yang Su-Wen", email="suwen@fzu.edu.cn" },
]
maintainers = [
    { name="Wu Bo", email="wubo@fzu.edu.cn" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Materials Science",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "scipy>=1.12",
    "tqdm>=4.66",
    "ase>=3.23",
    "seaborn>=0.13",
    "sqsgenerator>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://gitee.com/wubo-movers/poscarkit"
Repository = "https://gitee.com/wubo-movers/poscarkit.git"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"
