[project]
name = "poscarkit"
version = "0.10.7"
description = "A tool for modeling structure POSCAR files, based on Sublattice Occupying Fractions (SOFs)."
authors = [
    { name="Gao Min-Liang", email="barabama@qq.com" },
    { name="Qiao Yang", email="1848294558@qq.com" },
    { name="Yang Su-Wen", email="719192406@qq.com" },
]
maintainers = [
    { name="Wu Bo", email="wubo@fzu.edu.cn" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Materials Science",
]
requires-python = ">=3.10"
dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "matplotlib==3.10.8",
    "openpyxl==3.1.5",
    "scipy==1.16.3",
    "tqdm==4.67.3",
    "ase==3.26.0",
    "seaborn==0.13.2",
    "sqsgenerator==0.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/Barabama/poscarkit"
Repository = "https://github.com/Barabama/poscarkit.git"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
